# iouringd

./: CMakeLists.txt  Makefile  README.md
examples/: memfd_overlay_copy.c  per_job_service.sh  standalone_nop.c
include/iouringd/: api.h  client.h  protocol.h  submit.h  version.h
scripts/: cppcheck.sh  cppcheck.suppress  static_analysis.sh
src/: iouringd.c
src/daemon/: handshake.c  handshake.h  main.c  submit.c  submit.h
src/lib/: client.c  submit.c
tests/: run_tests.py  run_tests.sh  test_protocol_task_kinds.c
tests/abi/: cancel_request_contract.c  completion_res_contract.c  handshake_contract.c  submit_result_contract.c  timeout_request_contract.c
tests/integration/: bounded_admission_roundtrip.c  cancel_partial_target_rejected.c  cancel_request_rejected.c  cancel_submission_rejected.c  cancel_timeout_roundtrip.c  completion_invalid_task_id.c  config_stats_roundtrip.c  graceful_shutdown.c  handshake_client_rejects_invalid_response.c  handshake_invalid_response.c  handshake_roundtrip.c  invalid_completion_response.c  malformed_timeout_request_rejected.c  malformed_timeout_then_nop_roundtrip.c  nop_roundtrip.c  nop_then_timeout_roundtrip.c  nop_two_requests_roundtrip.c  openat_close_roundtrip.c  openat_file_read_roundtrip.c  per_client_credits_roundtrip.c  priority_dispatch_roundtrip.c  reconnect_task_id_roundtrip.c  register_accept_roundtrip.c  register_buffer_fixed_io_roundtrip.c  register_connect_roundtrip.c  register_file_read_roundtrip.c  register_file_write_roundtrip.c  register_poll_roundtrip.c  register_sock_read_roundtrip.c  register_sock_write_roundtrip.c  rejected_handshake_blocks_submit.c  release_busy_resource_rejected.c  restricted_policy_behavior.c  submit_accept_einval_rejected.c  submit_bad_magic_rejected.c  submit_reserved1_rejected.c  submit_reserved_bits_rejected.c  submit_version_major_rejected.c  timeout_roundtrip.c  timeout_then_nop_roundtrip.c  (+8 more)
tests/smoke/: test_version.c  version_smoke.c
tests/unit/: client_completion_validation.c  client_handshake_validation.c  client_submit_validation.c
